Add generated code and make project buildable.