@@ -5,7 +5,7 @@
   <artifactId>tupl</artifactId>
   <packaging>jar</packaging>
   <name>Tupl</name>
- <version>1.8.0</version>
+ <version>1.8.0-panama</version>
   <description>
     The Unnamed Persistence Library.
   </description>
@@ -158,38 +158,13 @@
       -->
 
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.6.0</version>
-        <executions>
-          <execution>
-            <id>page-access-transformer</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <executable>java</executable>
-          <arguments>
-            <argument>-cp</argument>
-            <argument>;</argument>
-            <argument>src/main/java/org/cojen/tupl/tools/PageAccessTransformer.java</argument>
-            <argument>src/main/java/org/cojen/tupl/core</argument>
-            <argument>src/main/java/org/cojen/tupl/core</argument>
-            <argument>clean</argument>
-          </arguments>
-        </configuration>
-      </plugin>
-
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
           <configuration>
-            <source>17</source>
-            <target>17</target>
+            <source>21</source>
+            <target>21</target>
+            <compilerArgs>--enable-preview</compilerArgs>
           </configuration>
       </plugin>
 
@@ -247,6 +222,7 @@
           <parallel>classes</parallel>
           <perCoreThreadCount>false</perCoreThreadCount>
           <threadCount>6</threadCount>
+          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
 
